Minor code fix [1]
- Integrated 'checkCollisions' method into 'Spell' Class
- Removed game.options.enemies.multSpeed option, all enemies will adopt
the 0.5 value, if not defined otherwise
- Other general corrections

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="../3rdparty/CAAT/CAAT.js"></script>
 
 	<!-- CAAGE game files -->
+	<script type="text/javascript" src="../src/init.js"></script>
 	<script type="text/javascript" src="../src/utils.js"></script>
 	<script type="text/javascript" src="../src/componentSystem.js"></script>
 	<script type="text/javascript" src="../src/components.js"></script>
