--- a/demo/index.html
+++ b/demo/index.html
@@ -28,6 +28,7 @@
 	
 	<!-- Custom game files -->
 	<script type="text/javascript" src="options.js"></script>
+	<script type="text/javascript" src="mage.js"></script>
 	<script type="text/javascript" src="data.js"></script>
 	<script type="text/javascript" src="demo.js"></script>
 </head>
