--- a/demo/index.html
+++ b/demo/index.html
@@ -19,8 +19,7 @@
 	<!-- CAAGE game files -->
 	<script type="text/javascript" src="../src/init.js"></script>
 	<script type="text/javascript" src="../src/utils.js"></script>
-	<script type="text/javascript" src="../src/componentSystem.js"></script>
-	<script type="text/javascript" src="../src/components.js"></script>
+	<script type="text/javascript" src="../src/buff.js"></script>
 	<script type="text/javascript" src="../src/drop.js"></script>
 	<script type="text/javascript" src="../src/enemy.js"></script>
 	<script type="text/javascript" src="../src/spell.js"></script>
