--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,9 @@
 			width: 1076;
 		}
 	</style>
+    <!-- Lodash -->
+    <script type="text/javascript" src="../3rdparty/lodash.min.js"></script>
+
 	<!-- CAAT files -->
 	<script type="text/javascript" src="../3rdparty/caat-min.js"></script>
 	<script type="text/javascript" src="../3rdparty/CAAT/CAAT.js"></script>
