--- a/tests/test.html
+++ b/tests/test.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Aspell Test Page</title>
+	<title>OrcTech CAAGE - Tests</title>
+	<!-- QUnit -->
 	<link rel="stylesheet" href="qunit.css" type="text/css" media="screen">
 	<script type="text/javascript" src="qunit.js"></script>
+
+    <!-- Lodash -->
+    <script type="text/javascript" src="../3rdparty/lodash.min.js"></script>
 
 	<!-- CAAT files -->
 	<script type="text/javascript" src="../3rdparty/caat-min.js"></script>
@@ -28,7 +32,7 @@
 	<script type="text/javascript" src="tests.js"></script>
 </head>
 <body>
-	<h1 id="qunit-header">OrcTech CAAGE - Test Suite</h1>
+	<h1 id="qunit-header">OrcTech CAAGE - Tests</h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
