Projectiles and Shield
Added Projectile class
Added Shield spell

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
 	<script type="text/javascript" src="../src/buff.js"></script>
 	<script type="text/javascript" src="../src/drop.js"></script>
 	<script type="text/javascript" src="../src/enemy.js"></script>
+	<script type="text/javascript" src="../src/projectile.js"></script>
 	<script type="text/javascript" src="../src/spell.js"></script>
 	<script type="text/javascript" src="../src/player.js"></script>
 	
